--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.1",
     "@ant-design/pro-components": "^2.6.48",
+    "@monaco-editor/react": "^4.7.0",
     "@umijs/route-utils": "^2.2.2",
     "antd": "5.24.5",
     "antd-style": "^3.6.1",
@@ -55,6 +56,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "lodash": "^4.17.21",
+    "mermaid": "^11.6.0",
     "moment": "^2.30.1",
     "omit.js": "^2.0.2",
     "querystring": "^0.2.1",
