--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "antd": "5.24.5",
     "antd-style": "^3.6.1",
     "classnames": "^2.5.1",
+    "docx": "^9.4.1",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
+    "marked": "^15.0.8",
     "mermaid": "^11.6.0",
     "moment": "^2.30.1",
     "omit.js": "^2.0.2",
@@ -66,7 +69,8 @@
     "react-dom": "^18.2.0",
     "react-echarts": "^0.1.1",
     "react-helmet-async": "^1.3.0",
-    "react-intl": "^7.1.6"
+    "react-intl": "^7.1.6",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
