--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "react-echarts": "^0.1.1",
     "react-helmet-async": "^1.3.0",
     "react-intl": "^7.1.6",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^3.3.0",
