--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "marked": "^15.0.8",
     "mermaid": "^11.6.0",
