--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@ant-design/pro-components": "^2.8.7",
     "@monaco-editor/react": "^4.7.0",
     "@umijs/route-utils": "^2.2.2",
-    "antd": "5.24.5",
+    "antd": "^5.25.0",
     "antd-style": "^3.6.1",
     "classnames": "^2.5.1",
     "docx": "^9.4.1",
@@ -88,7 +88,7 @@
     "@types/react-helmet": "^6.1.11",
     "@umijs/fabric": "^2.14.1",
     "@umijs/lint": "^4.1.1",
-    "@umijs/max": "^4.1.1",
+    "@umijs/max": "^4.4.10",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "express": "^4.18.2",
