--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@ant-design/icons": "^4.8.1",
     "@ant-design/pro-components": "^2.8.7",
     "@monaco-editor/react": "^4.7.0",
+    "@uiw/react-md-editor": "^4.0.6",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.25.0",
     "antd-style": "^3.6.1",
